--- a/app/views/trip_info_notifier/change.text.erb
+++ b/app/views/trip_info_notifier/change.text.erb
@@ -1,4 +1,4 @@
-The following trip information for <%= @trip.event.title %> has been updated on the website.
+The following trip information has been updated on the website for the <%= @trip.event.title %> trip to <%= @trip.event.location.icao_identifier + ' - ' + @trip.event.location.city + ', ' + @trip.event.location.state %>.
 
 Crew Arrival: <%= @trip.crew_arrival.strftime("%H:%M - %a %b %d, %Y") %>
 
