--- a/app/views/lhfe_flights/living_history_flight_experience.html.erb
+++ b/app/views/lhfe_flights/living_history_flight_experience.html.erb
@@ -100,7 +100,7 @@
 
 </div>
 
-<p style="margin: 0.75em; font-size: 0.75em;">Rides booked in advance are <%= number_to_currency(395, :precision => 0) %>, and increase to <%= number_to_currency(425, :precision => 0) %> one day before the event (event pricing may vary).</p>
+<p style="margin: 0.75em; font-size: 0.75em;">Rides booked in advance are <%= number_to_currency(@price.value, :precision => 0) %>, and increase to <%= number_to_currency(@price.alt_value, :precision => 0) %> one day before the event (event pricing may vary).</p>
 
 <p style="margin: 0.75em;"><%= link_to "Refund Policy", refund_policy_path %>.</p>
 
