--- a/app/views/members/member_application.html.erb
+++ b/app/views/members/member_application.html.erb
@@ -33,5 +33,7 @@ jQuery(function($){
 
 <p>Please complete and submit the following form. Regular squadron dues are $75 per year, or $25 for Cadets under 18. After you submit the form there will be a link to pay online.</p>
 
+<p class="form_tip">* = Required Field</p>
+
 <%= render 'application_form' %>
 
