--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,5 +1,7 @@
 <h1>Enter Product</h1>
 
+<p class="form_tip">* = Required Field</p>
+
 <%= render 'form' %>
 
 <%= link_to 'Back', products_path %>
