--- a/app/views/members/_application_form.html.erb
+++ b/app/views/members/_application_form.html.erb
@@ -51,11 +51,11 @@ $(document).ready(function () {
 <h3>Contact Info</h3>
 <div class="row">
   <div class="col-sm-6 field">
-    * <%= f.label :first_name %><br />
+    <%= f.label :first_name %>*<br />
     <%= f.text_field :first_name, :class => 'boxsizingBorder' %>
   </div>
   <div class="col-sm-6 field">
-    * <%= f.label :last_name %><br />
+    <%= f.label :last_name %>*<br />
     <%= f.text_field :last_name, :class => 'boxsizingBorder' %>
   </div>
 </div>
@@ -94,7 +94,7 @@ $(document).ready(function () {
 
 <div class="row">
   <div class="col-sm-4 field">
-    <%= f.label :home_phone %><br />
+    <%= f.label :home_phone, "Primary Phone" %>*<br />
     <%= f.text_field :home_phone, :class => 'boxsizingBorder' %>
   </div>
   <div class="col-sm-4 field">
@@ -134,8 +134,8 @@ $(document).ready(function () {
 
 <h3>CAF Info</h3>
 <div class="row">
-  <div class="col-sm-6 field">
-    <%= f.label :caf_col_no, "CAF Col #" %> <span class="form_note">Must have a valid number to join - <a href="https://commemorativeairforce.org/pages/membership-options">Join the CAF</a></span><br />
+  <div class="col-sm-12 field">
+    <%= f.label :caf_col_no, "CAF Col #" %>* <span class="form_tip">Must have a valid number to join - <a href="https://commemorativeairforce.org/pages/membership-options">Join the CAF</a></span><br />
     <%= f.text_field :caf_col_no, :size => '8' %>
   </div>
 </div>
