--- a/app/views/members/_user_fields_application.html.erb
+++ b/app/views/members/_user_fields_application.html.erb
@@ -1,6 +1,6 @@
 
     <div class="col-sm-6 field">
-    * <%= f.label :email %><br />
+    <%= f.label :email %>*<br />
     <%= f.text_field :email, :size => '20'  %>
     <%= f.hidden_field :username, :size => '20'  %>
     <% if @member.user.id.nil? %>
