--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -184,16 +184,16 @@
     </div>
   <% end %>
 </div>
-    <div class="col-sm-7">
 
 
+<div class="col-sm-7">
 <% if !@event.trip.blank? %>
 
 <table width="500" class="table_border">
   <tr>
     <th colspan="2">Trip Details:</th>
   </tr>
-  <tr class="odd_row">
+  <tr>
     <td width="150">Crew arrival:</td>
     <% if !@event.trip.crew_arrival.blank? %>
       <td><strong><%= @event.trip.crew_arrival.strftime("%b %d - %H:%M") %></strong></td>
@@ -201,7 +201,7 @@
       <td><strong>n/a</strong></td>
     <% end %>
   </tr>
-  <tr class="even_row">
+  <tr>
     <td>Tug time:</td>
     <% if !@event.trip.tug_time.nil? %>
       <td><strong><%= @event.trip.tug_time.strftime("%b %d - %H:%M") %></strong></td>
@@ -209,11 +209,11 @@
       <td><strong>n/a</strong></td>
     <% end %>
   </tr>
-  <tr class="odd_row">
+  <tr>
     <td>Wheels up:</td>
     <td><strong><%= @event.trip.wheels_up.strftime("%b %d - %H:%M") %></strong></td>
   </tr>
-  <tr class="even_row">
+  <tr>
     <td>Destination (<%= @event.location.icao_identifier %>) ETA:</td>
     <% if !@event.trip.destination_eta.nil? %>
       <td><strong><%= @event.trip.destination_eta.strftime("%b %d - %H:%M") %></strong></td>
@@ -221,7 +221,7 @@
       <td><strong>n/a</strong></td>
     <% end %>
   </tr>
-  <tr class="odd_row">
+  <tr>
     <td>Return ETA:</td>
     <% if !@event.trip.return_eta.nil? %>
       <td><strong><%= @event.trip.return_eta.strftime("%b %d - %H:%M") %></strong></td>
@@ -229,7 +229,7 @@
       <td><strong>n/a</strong></td>
     <% end %>
   </tr>
-  <tr class="even_row">
+  <tr>
     <td>Notes:</td>
     <td><%= markdown @event.trip.notes %></td>
   </tr>
@@ -239,6 +239,8 @@
 <% end %>
 </div>
 </div>
+
+
 
 <% if signed_in?%>
 <fieldset style="margin-top: 2em;">
@@ -305,7 +307,7 @@
   </tr>
 
 <% @event.event_signups.ordered.each_with_index do |event_signup, i| %>
-  <tr id="item_<%= event_signup.id %>" class="<%= cycle('odd_row', 'even_row') %>">
+  <tr id="item_<%= event_signup.id %>">
     <td><%= i + 1 %></td>
     <td><%= event_signup.member.last_name %>, <%= event_signup.member.first_name %></td>
     <td><%= event_signup.member.caf_col_no %></td>
@@ -377,7 +379,7 @@
   </tr>
 
 <% @event.attendances.ordered.each_with_index do |attendance, i| %>
-  <tr class="<%= cycle('odd_row', 'even_row') %>">
+  <tr>
     <td><%= i + 1 %></td>
     <td><%= attendance.member.last_name %>, <%= attendance.member.first_name %></td>
     <td><%= attendance.member.caf_col_no %></td>
