--- a/app/views/members/member_application.html.erb
+++ b/app/views/members/member_application.html.erb
@@ -29,7 +29,7 @@ jQuery(function($){
 
 <p>Thank you for your interest in joining the Devil Dog Squadron. We are always looking for new members. There is a lot of work to do, but we have fun doing it. And it's not all work in the hangar. Members have the opportunity travel with the Dog to airshows.</p>
 
-<p>Squadron membership is open to all Commemorative Air Force (CAF) members. If you are not yet a member of the CAF, you can learn more about the benefits of membership, and download an application form, at the <a href="http://commemorativeairforce.org/membership/membership-options">CAF's membership web page</a>.</p>
+<p>Squadron membership is open to all Commemorative Air Force (CAF) members. If you are not yet a member of the CAF, you can learn more about the benefits of membership, and download an application form, at the <a href="https://commemorativeairforce.org/pages/membership-options">CAF's membership web page</a>.</p>
 
 <p>Please complete and submit the following form. Regular squadron dues are $75 per year, or $25 for Cadets under 18. After you submit the form there will be a link to pay online.</p>
 
