added asterisks for required fields

--- a/app/views/members/_form.html.erb
+++ b/app/views/members/_form.html.erb
@@ -39,11 +39,11 @@
 <h3>Contact Info</h3>
 <div class="indent_row">
   <div class="cell field">
-    <%= f.label :first_name %><br />
+    <%= f.label :first_name %>*<br />
     <%= f.text_field :first_name, :size => '20' %>
   </div>
   <div class="cell field">
-    <%= f.label :last_name %><br />
+    <%= f.label :last_name %>*<br />
     <%= f.text_field :last_name, :size => '20' %>
   </div>
 </div>
@@ -76,7 +76,7 @@
 
 <div class="indent_row">
   <div class="cell field">
-    <%= f.label :home_phone %><br />
+    <%= f.label :home_phone %>*<br />
     <%= f.text_field :home_phone, :size => '13' %>
   </div>
   <div class="cell field">
@@ -110,7 +110,7 @@
 <h3>CAF Info</h3>
 <div class="indent_row">
   <div class="cell field">
-    <%= f.label :caf_col_no, "CAF Col #" %><br />
+    <%= f.label :caf_col_no, "CAF Col #" %>*<br />
     <%= f.text_field :caf_col_no, :size => '8' %>
   </div>
   <div class="cell field">
