--- a/app/views/members/_user_fields.html.erb
+++ b/app/views/members/_user_fields.html.erb
@@ -1,7 +1,7 @@
 
   <div class="cell">
   <div class="field">
-    <%= f.label :email %><br />
+    <%= f.label :email %>*<br />
     <%= f.text_field :email, :size => '20'  %>
   </div>
   </div>
