--- a/app/views/lhfe_flights/show.html.erb
+++ b/app/views/lhfe_flights/show.html.erb
@@ -25,7 +25,9 @@
 
 <p><strong>Note:</strong> Minimum of 5 passengers required for flight to occur.</p>
 
-<p>Please plan check in at the aircraft at least an hour before your scheduled flight time.</p>
+<p>Please plan to check in at the aircraft at least an hour before your scheduled flight time.</p>
+
+<p>For your safety, as well as all other passengers and crew, all riders must be able to enter and exit the Devil Dog unassisted through the front or rear hatch. These hatches are narrow openings and require climbing up and down vertical ladders with tall steps.</p>
 
 <h2>Typical Schedule</h2>
 <ul>
