added highlighting to disclaimer

--- a/app/views/lhfe_flights/show.html.erb
+++ b/app/views/lhfe_flights/show.html.erb
@@ -27,7 +27,7 @@
 
 <p>Please plan to check in at the aircraft at least an hour before your scheduled flight time.</p>
 
-<p>For your safety, as well as all other passengers and crew, all riders must be able to enter and exit the Devil Dog unassisted through the front or rear hatch. These hatches are narrow openings and require climbing up and down vertical ladders with tall steps.</p>
+<p>For your safety, as well as all other passengers and crew, <span style="background:#FCEA83;padding: 0 5px;">all riders must be able to enter and exit the Devil Dog unassisted</span> through the front or rear hatch. These hatches are narrow openings and require climbing up and down vertical ladders with tall steps.</p>
 
 <h2>Typical Schedule</h2>
 <ul>
