--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -145,8 +145,11 @@
             <p class="admin_heading">Admin</p>
             <p class="form_note admin_heading">You are seeing this admin area because you are logged in with admin privileges.</p>
             <div class='row'>
-              <div class="col-xs-6 col-sm-3" style="padding-top:1em;">
+              <div class="col-xs-6 col-sm-2" style="padding-top:1em;">
                 <%= button_to 'Edit Event', edit_event_path(@event), method: :get, :class => "btn-default btn" %>
+              </div>
+              <div class="col-xs-6 col-sm-2" style="padding-top:1em;">
+                <%= button_to 'Delete Event', @event, :confirm => 'Are you sure?', :method => :delete, :class => "btn-default btn" %>
               </div>
               <% if !@event.trip.blank? %>
               <div class="col-xs-6 col-sm-3" style="padding-top:1em;">
@@ -156,7 +159,7 @@
               <div class="col-xs-6 col-sm-3" style="padding-top:1em;">
                 <%= button_to 'Add Trip Details', new_trip_path(:event_id => @event), :class => "btn-default btn" %>
               </div>
-              <div class="col-xs-6 col-sm-3" style="padding-top:1em;">
+              <div class="col-xs-6 col-sm-2" style="padding-top:1em;">
                 <%= button_to 'Add LHFE Flight', new_lhfe_flight_path(:event_id => @event), :class => "btn-default btn" %>
               </div>
               <% end %>              
