hot code to make some rides sold out

--- a/app/views/lhfe_flights/show.html.erb
+++ b/app/views/lhfe_flights/show.html.erb
@@ -58,9 +58,13 @@ By email: <a href="mailto:rides@devildogsquadron.com">rides@devildogsquadron.com
     <%= @lhfe_flight.flight_start_time.strftime("%b %d, %Y %l:%M %p" ) %>
     <br />
   <%= @lhfe_flight.event.location.city %>, <%= @lhfe_flight.event.location.state %><br />
+
   <% if @lhfe_flight.flight_start_time < Time.now %>
   <p style="font-size: 0.75em;">This flight is no longer available to book online. Check at the aircraft to see if seats are still available.</p>
   <% else %>
+  <% if @lhfe_flight.id = 106 ||  @lhfe_flight.id = 107 %>
+     <p>This flight is sold out</p>
+  <% else %>  
   <% if ((@lhfe_flight.event.start - Time.now).to_f / 1.day).floor >= 1 %>
     <%= number_to_currency(@lhfe_flight.discount_price) %>
   <% else %>
