--- a/app/views/dues_payment_notifier/created.text.erb
+++ b/app/views/dues_payment_notifier/created.text.erb
@@ -11,7 +11,7 @@ Alternatively, if you prefer, you can submit a check for $75 payable to Devil Do
   209 Corsair Drive
   Georgetown, TX 78628
 
-or hand deliver to Beth Jenkins or Earnie Henderson.
+or hand deliver to Beth Jenkins or John Jackson.
 
 If you have already made your dues payment please disregard this auto-generated notice. Your membership should be updated soon.
 
