--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -130,7 +130,9 @@
 	  <p>Scheduled ride times:</p>
 	  <ul>
       <% event.lhfe_flights.each do |flight| %>
-        <li><%= link_to flight.flight_start_time.strftime("%A @ %I:%M %p"), lhfe_flight_path(flight) %></li>
+        <li><%= link_to flight.flight_start_time.strftime("%A @ %I:%M %p"), lhfe_flight_path(flight) %>
+        <% if flight.id == 146 ||  flight.id == 147  %> - SOLD OUT<% end %>
+        </li>
       <% end %>
     </ul>
  <% end %>
