updates for sold out rides

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -99,7 +99,7 @@
         <ul>
           <% @event.lhfe_flights.each do |flight| %>
             <li><%= link_to flight.flight_start_time.strftime("%A @ %I:%M %p"), lhfe_flight_path(flight) %>
-            <% if flight.id == 146 ||  flight.id == 147  %> - SOLD OUT<% end %>
+            <% if flight.id == 148 ||  flight.id == 150 ||  flight.id == 151 %> - SOLD OUT<% end %>
             </li>
           <% end %>
         </ul>
