--- a/app/views/lhfe_flights/living_history_flight_experience.html.erb
+++ b/app/views/lhfe_flights/living_history_flight_experience.html.erb
@@ -44,7 +44,7 @@
    <%= number_to_currency(flight.price) %>
   <% end %></p>
   
-  <% if flight.id == 146 ||  flight.id == 147  %>
+  <% if flight.id == 148 ||  flight.id == 150 ||  flight.id == 151  %>
    - SOLD OUT  </div>
   <% else %>
   
